--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -629,7 +629,7 @@ app.comments Comments
 app.capacity Capacity
 app.oneDimension Dimension One
 app.twoDimension Dimension Two
-
+app.none None
 #--Common keys End--
 app.similarcontainers=Similar Containers
 
@@ -910,7 +910,7 @@ specimen.derived.title=Specimen Derive
 specimen.msg=Name or Value
 errors.specimen.externalIdentifier.missing=<li><font color="red">Either {0} is missing in External Identifier</font></li>
 newSpecimen.msg=Type or Name
-newSpecimen.groupName Specimen Group
+newSpecimen.groupName Specimen Collection Group
 newSpecimen.parentLabel=Parent Label
 errors.newSpecimen.biohazard.missing=<li><font color="red">Either {0} is missing in Biohazards</font></li>
 newSpecimen.specimenEventParameters=Specimen Event Parameters
@@ -946,6 +946,7 @@ department.editTitle=Edit Department
 department.operation=operation
 department.identifier=Identifier
 department.searchTitle=Enter The Identifier
+
 
 #--Department Add/Edit keys End--
 
@@ -1077,6 +1078,9 @@ specimenCollectionGroup.surgicalPathologyNumber=Surgical pathology number
 specimenCollectionGroup.collectionStatus=Collection Status
 specimenCollectionGroup.participantNameWitProtocolId=Participant Name (Protocol ID)
 specimen.details.label Specimen Details
+childSpecimen.label Create Child Specimen(s)
+specimen.derivative Derivative
+specimen.virtualLocation Specimen is virtually Located
 
 #Cheked for the active specimen before disabling:kalpana
 specimencollectiongroup.specimen.exists <li><font color\="red">Unable to disable Speciemen Collection Group \: Before disabling it ,dispose all the associated Specimens.</font></li>
@@ -1411,9 +1415,6 @@ assignPrivileges.action(s)=Action(s)
 PHI_ACCESS=PHI Access
 
 
-
-
-
 #-- AssignPrivileges Keys End --
 
 #-- Configure Result View keys Begin --
@@ -1612,7 +1613,7 @@ summary.page.table.type.cell=Cell
 summary.page.table.type.mol=Molecular
 summary.page.table.type.fluid=Fluid
 summary.page.quantity.tissue=gm
-summary.page.quantity.cell=cell count
+summary.page.quantity.cell=Cell Count
 summary.page.quantity.mol=µg
 summary.page.quantity.fluid=ml
 
