--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1899,5 +1899,7 @@ commonRequiredField.message=indicates a required field
 
 specimen.received=Received
 parent.specimen.details.label Parent Specimen Details
+specimen.details.label=Specimen Details
+
 specimen.storage.type=Storage Type
 save.query.tq.error Sorry! Cannot save Temporal Query! Functionality yet not supported.
