*** empty log message ***
SVN-Revision: 14164

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -1,6 +1,6 @@
 #Enter absolute path of the installed directory of JBoss server {JBOSS_HOME}. 
 #Please note that the path must be separated by Unix style path separator "/".
-jboss.home.dir=
+jboss.home.dir=D:/Nightly_Build/jboss-4.2.2.GA
 #Please specify the server configuration name of jboss where you want to deploy.
 #By default it is set to 'default' configuration. This is useful if someone wants 
 #to run multiple instances of suite application on same jboss.
@@ -8,48 +8,50 @@ jboss.server.name=default
 
 #Enter server port on which JBoss is listing the client request
 #Default port is 8080 
-jboss.server.port=8080
+jboss.server.port=18080
 
 #database type permissible values: oracle or mysql
-database.type=
+database.type=oracle
 
 #Hostname or IP address of the machine on which the database server is running.
-database.host=localhost
+database.host=10.88.25.66
 
 #Port number to connect with the database server
 #Default port for MySQL : 3306
 #Default Port for Oracle: 1521
-database.port=
+database.port=1521
 
 #Oracle TNS name, applicable only when database.type=oracle
-oracle.tns.name=
+oracle.tns.name=ORCL
 
-database.name=catissuecore
-database.username=catissue_core
-database.password=catissue_core
+database.name=orcl
+database.username=winqauser
+database.password=winqauser123
+database.tablespace=WIN_NIGHTLY_BUILD
+database.temptablespace=TEMP
+database.tempusername=winightlybuild
+database.temppassword=winightlybuild
 
-email.administrative.emailAddress=
-email.sendEmailFrom.emailAddress=
-email.mailServer=
+email.administrative.emailAddress=admin@admin.com
+email.sendEmailFrom.emailAddress=admin@admin.com
+email.mailServer=persistent.co.in
 
 #Application login timeout interval in minutes. 
 #Default value is 30 minutes
 session.timeout=30
 
 #Information related to first administrator account
-first.admin.department=
-first.admin.institution=
-first.admin.cancerresearchgroup=
-first.admin.emailAddress=
-first.admin.password=
+first.admin.department=abc
+first.admin.institution=xyz
+first.admin.cancerresearchgroup=aaa
+first.admin.emailAddress=admin@admin.com
+first.admin.password=Login123
 
 #Enter path for the MMTx home directory
-caties.mmtx.home=
+caties.mmtx.home=yes
 #Hostname or IP address of the machine on which the JBoss server is running.
 #CAUTION: This parameter should not be set to localhost. Set the actual hostname or IP address
-jboss.server.host=
-#Enter yes/no to specify Secure HTTP connection
-jboss.container.secure=
+jboss.server.host=10.79.0.28
 
 #Values for DE API
 caCORE.jBoss.home.dir=
