--- a/build.xml
+++ b/build.xml
@@ -74,6 +74,12 @@
 	<target name="init" description="initialize">
 		<!-- Create the time stamp -->
 		<if>
+			<equals arg1="" arg2="${jboss.home.dir}" />
+			<then>
+				<fail message="jboss.home.dir is not set in caTissueInstall.properties" />
+			</then>
+		</if>
+		<if>
 			<equals arg1="" arg2="${jboss.server.name}" />
 			<then>
 				<fail message="jboss.server.name is not set in caTissueInstall.properties" />
