Barcode related changes
SVN-Revision: 14236

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -439,6 +439,7 @@ participant.lookup.success=<font color="red">Submit was not successful because s
 participant.collectionProtocolReg=Protocol Registration(s)
 participant.collectionProtocolReg.protocolTitle=Collection Protocol
 participant.collectionProtocolReg.participantProtocolID=Participant Protocol ID
+participant.collectionProtocolReg.barcode=Barcode
 participant.collectionProtocolReg.participantRegistrationDate=Registration Date
 participant.collectionProtocolReg.consent=Consent
 participant.collectionProtocolReg.specimenCollectionGroup=Specimen Collection Group
@@ -1069,6 +1070,7 @@ specimenCollectionGroup.site=Collection Site
 specimenCollectionGroup.collectedByParticipant=Participant
 specimenCollectionGroup.collectedByProtocolParticipantNumber=Protocol Participant Identifier
 specimenCollectionGroup.groupName Specimen Group Name
+specimenCollectionGroup.barcode=Barcode
 specimenCollectionGroup.offset Offset
 specimenCollectionGroup.studyCalendarEventPoint=Study Calendar Event Point
 specimenCollectionGroup.clinicalDiagnosis=Clinical Diagnosis
