Barcode related changes
SVN-Revision: 14241

--- a/catissuecore-properties/LabelGenerator.Properties
+++ b/catissuecore-properties/LabelGenerator.Properties
@@ -3,3 +3,5 @@ storageContainerLabelGeneratorClass=edu.wustl.catissuecore.namegenerator.Default
 specimenBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultSpecimenBarcodeGenerator
 storageContainerBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultStorageContainerBarcodeGenerator
 speicmenCollectionGroupLabelGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultSCGLabelGenerator
+speicmenCollectionGroupBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultSCGBarcodeGenerator
+collectionProtocolRegistrationBarcodeGeneratorClass=edu.wustl.catissuecore.namegenerator.DefaultCPRBarcodeGenerator
