UI Changes: Sagar
SVN-Revision: 14293

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1192,6 +1192,7 @@ biohazard.searchTitle=Enter The Identifier
 #-- Biohazard Add/Edit Keys End --
 
 #-- EventParameters Add/Edit Keys Begin --
+eventparameters=Event Details
 eventparameters.user=User
 eventparameters.distributed.by= Distributed By
 eventparameters.id=Identifier
@@ -1296,6 +1297,7 @@ collectioneventparameters.searchtitle=Enter The Identifier
 #-- collectioneventparameters Add/Edit Keys End --
 
 #-- transfereventparameters Add/Edit Keys Begin --
+transfereventparameters=Transfer Event
 transfereventparameters.frompositiondimensionone=From Position Dimension One
 transfereventparameters.frompositiondimensiontwo=From Position Dimension Two
 transfereventparameters.topositiondimensionone=To Position Dimension One
