--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -74,7 +74,7 @@ orderingsystem.label.tissueSlidefromBlock=Tissue Slide From Block
 orderingsystem.label.arrayName=Array Name
 
 orderingSystem.label.create Create
-
+errors.browser.not.supports.iframe=Your Browser doesn't support IFrames.
 errors.ordername.required= <li><font color="red">OrderName required</font></li>
 errors.distributionprotocol.required=<li><font color="red">Distribution Protocol Required</font></li>
 errors.arrayname.required= <li><font color="red">Array Name required</font></li>
@@ -919,10 +919,10 @@ storageposition.not.available <li><font color\="red">There are no available stor
 specimencollectiongroup.not.entered <li><font color\="red">You have to enter Speciemen Collection Group of Parent Specimen on Parent Specimen page before creating derived Specimens</font></li>
 specimenEventParameters.list=Specimen Event Parameters List
 specimenEventParameters.noSpecimen=No Specimen Event Parameters are available.
-specimenEventParameters.caption=Add New Specimen Event
-specimenEventParameters.label=Select new event:
+specimenEventParameters.caption=Select Specimen Event To Add
+specimenEventParameters.label=Select new event
 
-specimen.receivedevents.title=Recieved Event
+specimen.receivedevents.title=Received Event
 specimen.collectedevents.title=Collected Event
 
 specimen.receivedevents.username=Receiver
@@ -1198,12 +1198,15 @@ eventparameters.distributed.by= Distributed By
 eventparameters.id=Identifier
 eventparameters.comments=Comments
 eventparameters.dateofevent=Date
-eventparameters.timeinhours=Hr
-eventparameters.timeinminutes=Min
+eventparameters.timeinhours=Hr.
+eventparameters.timeinminutes=Min.
 eventparameters.time Time
 #-- eventparameters Add/Edit Keys End --
+eventparameters.event=Event
+eventparameter=Event Parameter
 
 #-- FrozenEventParameters Add/Edit Keys Begin --
+frozeneventparameters=Frozen Event
 frozeneventparameters.name=Frozen Event Parameters
 frozeneventparameters.title=New Frozen Event Parameters
 frozeneventparameters.edittitle=Edit Frozen Event Parameters
@@ -1212,6 +1215,7 @@ frozeneventparameters.searchTitle=Enter The Identifier
 #-- frozeneventparameters Add/Edit Keys End --
 
 #-- checkincheckouteventparameter Add/Edit Keys Begin --
+checkincheckouteventparameter=Check In Check Out Event
 checkincheckouteventparameter.storagestatus=Storage Status
 checkincheckouteventparameter.name=Check In Check Out Event Parameters
 checkincheckouteventparameter.title=New Check In Check Out Event Parameters
@@ -1220,6 +1224,7 @@ checkincheckouteventparameter.searchTitle=Enter The Identifier
 #-- checkincheckouteventparameter Add/Edit Keys End --
 
 #-- receivedeventparameters Add/Edit Keys Begin --
+receivedeventparameters=Received Event
 receivedeventparameters.receivedquality=Quality
 receivedeventparameters.name=Received Event Parameters
 receivedeventparameters.title=New Received Event Parameters
@@ -1228,6 +1233,7 @@ receivedeventparameters.searchTitle=Enter The Identifier
 #-- receivedeventparameters Add/Edit Keys End --
 
 #-- fluidspecimenrevieweventparameters Add/Edit Keys Begin --
+fluidspecimenreviewparameter=Fluid Specimen Review Event
 fluidspecimenrevieweventparameters.cellcount=Cell Count
 fluidspecimenrevieweventparameters.name=Fluid Specimen Review Event Parameters
 fluidspecimenrevieweventparameters.title=New Fluid Specimen Review Event Parameters
@@ -1236,6 +1242,7 @@ fluidspecimenrevieweventparameters.searchTitle=Enter The Identifier
 #-- fluidspecimenrevieweventparameters Add/Edit Keys End --
 
 #-- cellspecimenreviewparameters Add/Edit Keys Begin --
+cellspecimenreviewparameters=Cell Specimen Review Event
 cellspecimenreviewparameters.neoplasticcellularitypercentage=Neo Plastic Cellularity Percentage
 cellspecimenreviewparameters.viablecellpercentage=Viable Cell Percentage
 cellspecimenreviewparameters.name=Cell Specimen Review Parameters
@@ -1245,6 +1252,7 @@ cellspecimenreviewparameters.searchTitle=Enter The Identifier
 #-- cellspecimenreviewparameters Add/Edit Keys End --
 
 #-- tissuespecimenrevieweventparameters Add/Edit Keys Begin --
+tissuepecimenreviewparameters=Tissue Specimen Review Event
 tissuespecimenrevieweventparameters.neoplasticcellularitypercentage=Neo Plastic Cellularity Percentage
 tissuespecimenrevieweventparameters.necrosispercentage=Necrosis Percentage
 tissuespecimenrevieweventparameters.lymphocyticpercentage=Lymphocytic Percentage
@@ -1258,6 +1266,7 @@ tissuespecimenrevieweventparameters.searchTitle=Enter The Identifier
 
 
 #-- disposaleventparameters Add/Edit Keys Begin --
+disposaleventparameters=Disposal Event
 disposaleventparameters.name=Disposal Event Parameters
 disposaleventparameters.title=New Disposal Event Parameters
 disposaleventparameters.EDITtitle=Edit Disposal Event Parameters
@@ -1267,6 +1276,7 @@ disposaleventparameters.activityStatus Activity Status
 #-- disposaleventparameters Add/Edit Keys End --
 
 #--  Thaweventparameters Add/Edit Keys Begin --
+thaweventparameters=Thaw Event
 thaweventparameters.name=Thaw Event Parameters
 thaweventparameters.title=New Thaw Event Parameters
 thaweventparameters.edittitle=Edit Thaw Event Parameters
@@ -1274,6 +1284,7 @@ thaweventparameters.searchTitle=Enter The Identifier
 #-- thaweventparameters Add/Edit Keys End --
 
 #-- molecularspecimenreviewparameters Add/Edit Keys Begin --
+molecularspecimenreviewparameters=Molecular Specimen Review Event
 molecularspecimenreviewparameters.gelimageurl=Gel Image URL
 molecularspecimenreviewparameters.qualityindex=Quality Index
 molecularspecimenreviewparameters.lanenumber=Lane Number
@@ -1288,6 +1299,7 @@ molecularspecimenreviewparameters.searchTitle=Enter The Identifier
 #-- molecularspecimenreviewparameters Add/Edit Keys End --
 
 #-- collectioneventparameters Add/Edit Keys Begin --
+collectioneventparameter=Collection Event
 collectioneventparameters.container=Container
 collectioneventparameters.collectionprocedure=Procedure
 collectioneventparameters.name=Collection Event Parameters
@@ -1305,7 +1317,6 @@ transfereventparameters.topositiondimensiontwo=To Position Dimension Two
 transfereventparameters.fromstoragecontainerid=From Storage Container ID
 transfereventparameters.tostoragecontainerid=To Storage Container ID
 transfereventparameters.name=Transfer Event Parameters
-transfereventparameters.title=New Transfer Event Parameters
 transfereventparameters.edittitle=Edit Transfer Event Parameters
 transfereventparameters.searchTitle=Enter The Identifier
 transfereventparameters.fromposition=From Position
@@ -1313,6 +1324,7 @@ transfereventparameters.toposition=To Position
 #-- transfereventparameters Add/Edit Keys End --
 
 #-- spuneventparameters Add/Edit Keys Begin --
+spuneventparameters=Spun Event
 spuneventparameters.name=Spun Event Parameters
 spuneventparameters.title=New Spun Event Parameters
 spuneventparameters.edittitle=Edit Spun Event Parameters
@@ -1322,6 +1334,7 @@ spuneventparameters.searchtitle=Enter The Identifier
 #-- spuneventparameters Add/Edit Keys End --
 
 #-- embeddedeventparameters Add/Edit Keys Begin --
+embeddedeventparameters=Embedded Event
 embeddedeventparameters.name=Embedded Event Parameters
 embeddedeventparameters.title=New Embedded Event Parameters
 embeddedeventparameters.EDITtitle=Edit Embedded Event Parameters
@@ -1330,6 +1343,7 @@ embeddedeventparameters.searchTitle=Enter The Identifier
 #-- embeddedeventparameters Add/Edit Keys End --
 
 #-- fixedeventparameters Add/Edit Keys Begin --
+fixedeventparameters=Fixed Event
 fixedeventparameters.fixationtype=Fixation Type
 fixedeventparameters.durationinminutes=Duration In Minutes
 fixedeventparameters.gforce=GForce
@@ -1340,6 +1354,7 @@ fixedeventparameters.searchTitle=Enter The Identifier
 #-- fixedeventparameters Add/Edit Keys End --
 
 #-- procedureeventparameters Add/Edit Keys Begin --
+procedureeventparameter=Procedure Event
 procedureeventparameters.url=URL
 procedureeventparameters.entername=Name
 procedureeventparameters.name=Name
@@ -1350,7 +1365,7 @@ procedureeventparameters.searchTitle=Enter The Identifier
 
 
 #--  Distribution Add/Edit Keys Begin --
-distribution.name=Distribution
+distribution.name=Distribution Event
 distribution.distributedBy Distributed By
 distribution.identifier=Distribution Identifier
 distribution.protocol=Distribution Protocol
@@ -1520,6 +1535,7 @@ Distribution_array.header=Array Distribution
 SpecimenArray.header=Specimen Array
 SimpleQuery.header=Simple Query
 ReportedProblems.header=Reported Problems
+datetime=Date/Time
 
 #-- Search Page Headers end --
 
@@ -1859,6 +1875,9 @@ savequery.column.value=Value
 
 #---Conflict resolver keys--
 app.reportedConflicts=Conflicting Reports
+caTies.conflict.details.title=Conflict Details
+caTies.conflict.symbol=-
+caTies.conflict.noreport.message=There are no conflicting enteries.
 caTies.conflict.resolve.title=Pending Conflict Reports
 caTies.conflict.report.spn=Surgical Pathological Number
 caTies.conflict.report.date=Report loaded date
@@ -1903,7 +1922,6 @@ commonRequiredField.message=indicates a required field
 
 specimen.received=Received
 parent.specimen.details.label Parent Specimen Details
-specimen.details.label=Specimen Details
 
 specimen.storage.type=Storage Type
 save.query.tq.error Sorry! Cannot save Temporal Query! Functionality yet not supported.
