--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1925,3 +1925,6 @@ parent.specimen.details.label Parent Specimen Details
 
 specimen.storage.type=Storage Type
 save.query.tq.error Sorry! Cannot save Temporal Query! Functionality yet not supported.
+participant.registered.msg.events = Cannot edit events, Participant Registered
+participant.registered.msg.specimen = Cannot edit requirement specimen, Participant Registered
+participant.registered.msg.consents = Cannot delete consents, Participant Registered
