--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -28,7 +28,6 @@ mylist.label.specimenEvent=Specimen Event
 mylist.label.multipleSpecimenPage=Multiple Specimen Page
 mylist.label.orderBioSpecimen=Order BioSpecimens
 
-
 #Ordering System
 orderingsystem.label.requestOrder=Order Biospecimen
 orderingsystem.label.orderRequestName=Order Name
@@ -1376,7 +1375,7 @@ distribution.fromSite=From Site
 distribution.toSite=To Site
 distribution.specimenType=Specimen Type
 distribution.searchTitle=Enter The Identifier
-distribution.distributedItem=Distributed Item(S)
+distribution.distributedItem=Distributed Item(s)
 itemrecord.specimenId=Specimen ID
 itemrecord.quantity=Quantity
 errors.distribution.quantity Quantity entered is greater than the available quantity.
@@ -1647,6 +1646,7 @@ shoppingcart.duplicateObjsError=<li><font color="red">{1} records were already p
 shoppingcart.exportfilexception=<li><font color="red">Error while exporting the file.Please contact Administrator.</font></li>
 
 #Aliquots keys
+aliquots.applyFirstToAll=Apply First Location To All
 aliquots.createTitle=Create Aliquot
 aliquots.title=Aliquot
 aliquots.summaryTitle=Aliquot Creation Summary
@@ -1676,7 +1676,7 @@ specimenArrayAliquots.specimenType=Specimen Type
 specimenArrayAliquots.label=Label
 specimenArrayAliquots.barcode=Barcode
 specimenArrayAliquots.location=Location
-
+specimenArrayAliquots.parent=Parent Specimen Array
 
 specimenArrayAliquots.summaryTitle=Specimen Array Aliquot Creation Summary
 
