--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1076,7 +1076,7 @@ specimenCollectionGroup.studyCalendarEventPoint=Study Calendar Event Point
 specimenCollectionGroup.clinicalDiagnosis=Clinical Diagnosis
 specimenCollectionGroup.clinicalStatus=Clinical Status
 specimenCollectionGroup.medicalRecordNumber=Medical Record Number
-specimenCollectionGroup.surgicalPathologyNumber=Surgical pathology number
+specimenCollectionGroup.surgicalPathologyNumber=Surgical Pathology Number
 specimenCollectionGroup.collectionStatus=Collection Status
 specimenCollectionGroup.participantNameWitProtocolId=Participant Name (Protocol ID)
 specimen.details.label Specimen Details
@@ -1118,6 +1118,7 @@ storageType.holdsSpecimenClass=Specimen Type
 #-- StorageContainer Add/Edit Keys Begin --
 storageContainer.id=Identifier
 storageContainer.title=Add Storage Container
+storageContainer.header=Storage Container
 storageContainer.editTitle=Edit Storage Container
 storageContainer.type=Type
 storageContainer.name=Container Name
