multiple specimen related changes
SVN-Revision: 14376

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -936,6 +936,7 @@ specimen.label=Label
 #-- Patch ID: Bug#3184_3
 specimen.checkboxLabel=Specimen entry based on collection protocol
 print.checkboxLabel=Print Labels
+create.CpChildSp = Create Aliquot/Derived Specimen as per CP
 #-- New Specimen Keys End --
 
 #--Department Add/Edit keys Begin--
