logging configuration was not getting configured which is corrected. bug 8494
SVN-Revision: 14429

--- a/build.xml
+++ b/build.xml
@@ -164,6 +164,10 @@
 				<include name="**/*.hbm.xml" />
 				<include name="**/*.ser" />
 			</fileset>
+			<fileset dir="${base.dir}" >
+				<include name="log4j.properties" />
+			</fileset>
+			
 		</copy>
 	</target>
 	
