--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -37,6 +37,7 @@ orderingsystem.button.submit=Next
 orderingsystem.tooltip.button.submit=Proceed To Order Details
 orderingsystem.label.specimenList=Specimen List
 orderingsystem.label.specimenName=Specimen Name
+orderingsystem.label.distributionSite=Storage Site
 orderingsystem.label.availableQuantity=Available Quantity
 orderingsystem.label.requestedQuantity=Required Quantity
 orderingsystem.label.description=Description
@@ -80,6 +81,12 @@ errors.distributionprotocol.required=<li><font color="red">Distribution Protocol
 errors.arrayname.required= <li><font color="red">Array Name required</font></li>
 errors.arraytype.required=<li><font color="red">Array Type Required</font></li>
 errors.requestedQuantity.required=<li><font color="red">Please enter appropriate requested Quantity</font></li>
+errors.same.distributionSite=<li><font color="red">Specimens from multiple sites exist,you can place an order from only one site at a time.</font></li>
+errors.same.distributionSite.required=<li><font color="red">Either specimen site Not Available or Specimens from multiple sites exist,you can place an order from only one site at a time.</font></li>
+errors.availableQuantity.required=<li><font color="red">Specimens cannot be ordered with no available Quantity.Specimen named {0} has no Available Quantity.</font></li>
+errors.specimenPosition.required=<li><font color="red">Specimens cannot be ordered with virtual storage location.Specimen named {0} is virtually located . </font></li>
+errors.specimenArray.same.distributionSite.required=<li><font color="red">Specimen Arrays from multiple sites exist,you can place an order from only one site at a time.</font></li>
+
 errors.specimenClass.required=<li><font color="red">Specimen Class Required</font></li>
 errors.specimenType.required=<li><font color="red">Specimen Type Required</font></li>
 errors.tissueSite.required=<li><font color="red">Tissue Site Required</font></li>
