--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -74,6 +74,14 @@ orderingsystem.label.existingArray=Existing Array
 orderingsystem.label.tissueSlidefromBlock=Tissue Slide From Block
 orderingsystem.label.arrayName=Array Name
 
+errors.ordering.note=<font size\="3.0"> <b>Note</b>: If the My List contained specimens with any one of the following properties, </font> 
+errors.ordering.note1=<font size\="3.0"> they will not be available for placing an order:</font> 
+errors.ordering.a=<font size\="3.0"> a.  Is stored in the virtual location</font> 
+errors.ordering.b=<font size\="3.0"> b. Is of zero quantity</font> 
+errors.ordering.c=<font size\="3.0"> c. Is not available</font> 
+errors.ordering.d=<font size\="3.0"> d. Is anticipated (i.e. with collection status pending, over due, not collected)</font> 
+
+
 orderingSystem.label.create Create
 errors.browser.not.supports.iframe=Your Browser doesn't support IFrames.
 errors.ordername.required= <li><font color="red">OrderName required</font></li>
