MSR changes for S5
SVN-Revision: 14449

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -720,6 +720,7 @@ buttons.reset=Reset
 buttons.approve=Approve
 buttons.reject=Reject
 buttons.submit=Submit
+buttons.addPrivilege=Add Privilege
 buttons.close=Close
 buttons.pending=Pending
 buttons.edit=Edit
