--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -184,8 +184,8 @@ consent.consenttiers Consent Tiers\t
 consent.statements Statements
 consent.withdrawconsenttier Withdraw Consent Tier
 consent.withdrawquestion What do you want to do with the withdrawn specimen/s?
-consent.discard Discard the Specimen and all Sub Specimen(disable)
-consent.returntocollectionsite Return Specimen to Collection Site
+consent.discard To Discard the Specimen and all Sub Specimen(disable)-click '<b>Discard</b>'
+consent.returntocollectionsite To Return Specimen to Collection Site -click '<b>Return</b>'
 consent.noaction Perform no action on the Specimens
 consent.withdrawconsents Withdraw Consents
 consent.withdrawspecimens What do you want to do with the withdrawn specimens?
