log4j.properties tepmlate copied to zip in create_zip target
SVN-Revision: 14465

--- a/build.xml
+++ b/build.xml
@@ -275,6 +275,12 @@
 			<include name ="log4j.properties"/>
 			<replacefilter token="@@jbosshome@@" value="${jboss.server.url}"/>
 		</replace>
+		<antcall target="copydeletedjars" >
+			<param name="deleteFromDir" value="${base.dir}/WEB-INF/lib"  />
+		</antcall>
+		<antcall target="copydeletedjars" >
+			<param name="deleteFromDir" value="${temp.dir}/catissuecorecsm"/>
+		</antcall>
 
 		<war destfile="catissuecore.war" webxml="WEB-INF/web.xml" 
 			duplicate="preserve" manifest="${base.dir}/MANIFEST.MF" >
@@ -334,6 +340,7 @@
 				<exclude name="**/WEB-INF/lib/csmapi.jar" />
 				<exclude name="**/WEB-INF/lib/dom4*.jar" />
 				<exclude name="**/WEB-INF/lib/jta.jar" />
+				<exclude name="**/WEB-INF/lib/cglib*.jar" />
 				<exclude name="**/META-INF/**" />
 				<exclude name="Happy.jsp" />
 				<exclude name="Criteria.jsp" />
@@ -341,6 +348,68 @@
 		</war>
 
 	</target>	
+	
+	<target name="copydeletedjars">
+		<echo>deleting unneccesary jars from ${deleteFromDir}</echo>
+	<delete failonerror="false" >  
+		<fileset dir="${deleteFromDir}">
+			<include name="backport-util-concurrent-3.0.jar" /> 
+			<include name="c3p0-0.8.4.5.jar" />
+			<include name="c3p0-0.8.5.2.jar" /> 
+			<include name="castor-1.0.2.jar" /> 
+			<include name="cglib-2.1.jar" /> 
+			<include name="commons-collections-2.1.1.jar" />
+			<include name="commons-collections-3.1.jar" /> 
+			<include name="commons-discovery-0.2.jar" /> 
+			<include name="commons-fileupload.jar" /> 
+			<include name="commons-lang-2.1.jar" /> 
+			<include name="commons-logging-1.0.4.jar" /> 
+			<include name="dom4*.jar" /> 
+			<include name="ehcache-1.1.jar" />
+			<include name="ehcache-1.2.2.jar" /> 
+			<include name="freemarker.jar" /> 
+			<include name="jakarta-oro.jar" /> 
+			<include name="uml-1.3.jar" /> 
+			<include name="wsdl4j-1.5.1.jar" /> 
+			<include name="xalan-2.4.0.jar" /> 
+			<include name="p6spy.jar" /> 
+			<include name="sdkClient.jar" /> 
+			<include name="uuid-key-generator.jar" /> 
+			<include name="wsdl4j.jar" /> 
+			<include name="j2ee.jar" /> 
+			<include name="caGrid-1.0-caDSR-client.jar" /> 
+			<include name="caGrid-1.0-caDSR-common.jar" /> 
+			<include name="caGrid-1.0-caDSR-stubs.jar" /> 
+			<include name="caGrid-1.0-core.jar" /> 
+			<include name="caGrid-1.0-data-common.jar" /> 
+			<include name="caGrid-1.0-data-stubs.jar" /> 
+			<include name="caGrid-1.0-data-utils.jar" /> 
+			<include name="caGrid-1.0-fqp-client.jar" /> 
+			<include name="caGrid-1.0-fqp-common.jar" /> 
+			<include name="caGrid-1.0-fqp-stubs.jar" /> 
+			<include name="caGrid-1.0-metadata-common.jar" /> 
+			<include name="caGrid-1.0-metadata-security.jar" /> 
+			<include name="caGrid-1.0-sdkQuery.jar" /> 
+			<include name="caGrid-1.0-ServiceSecurityProvider-client.jar" /> 
+			<include name="caGrid-1.0-ServiceSecurityProvider-common.jar" /> 
+			<include name="jboss-common-jdbc-wrapper.jar"/>
+			<include name="mysql-connector-java-3.1.13-bin.jar"/>
+			<include name="ojdbc14.jar"/>
+			<include name="boot.jar" /> 
+			<include name="c3p0-0.9.0.jar" /> 
+			<include name="catissuecore-client.jar" /> 
+			<include name="experiment-client.jar" /> 
+			<include name="jboss-client.jar" /> 
+			<include name="junit-3.8.1.jar" /> 
+			<include name="mockobjects-core-0.09.jar" /> 
+			<include name="mysql-connector-java-5.0.8-bin.jar" /> 
+			<include name="openide-util.jar" /> 
+			<include name="acrobat-core.jar" />
+		</fileset>		
+
+	</delete>
+</target>
+
 	<target name="clean_temp_dir_csmwar" description="delete temp directory used for caCORE unpack">
 		<!-- do delete ${temp.dir} -->
 		<delete dir="${temp.dir}" />
@@ -444,6 +513,8 @@
 		<!-- only single war file is being used so comment it -->
 		<!-- <copy file="catissuecorecsm.war" todir="${zip.dir}" overwrite="true" /> -->
 		<copy file="catissuecore-ds.xml" todir="${zip.dir}" overwrite="true" />
+		<copy file="log4j.properties" todir="${zip.dir}" overwrite="true" />
+
 		<copy file="caTissueInstall.properties" todir="${zip.dir}" overwrite="true" />
 		<copy file="build-properties.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="MANIFEST.MF" todir="${zip.dir}" overwrite="true" />
