modified messages for withdrawn consent of specimen
SVN-Revision: 14479

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -186,9 +186,10 @@ consent.withdrawconsenttier Withdraw Consent Tier
 consent.withdrawquestion What do you want to do with the withdrawn specimen/s?
 consent.discard To Discard the Specimen and all Sub Specimen(disable)-click '<b>Discard</b>'
 consent.returntocollectionsite To Return Specimen to Collection Site -click '<b>Return</b>'
-consent.noaction Perform no action on the Specimens
+consent.noaction To Perform no action on the Specimens -click '<b>Reset</b>'
 consent.withdrawconsents Withdraw Consents
 consent.withdrawspecimens What do you want to do with the withdrawn specimens?
+consent.applystatusquestion What do you want to do with the consent status of specimen/s?
 consent.defineconsents Define Consents
 consent.consentforspecimen Consent for Specimen
 consent.specimenCollectionGroupResponseStatus Specimen Collection Group Response
@@ -198,8 +199,8 @@ consents.consents Consents
 consents.newspecimen New Specimen
 consent.verificationmessage I have verified that distribution of the specimen is as per consent of Participant
 consent.consentwaived Consent Waived
-consent.currentstatusonnonconflictingspecimen Apply the current status to only non-conflicting specimen(s)
-consent.currentstatusonallspecimen Apply the current status on all specimens
+consent.currentstatusonnonconflictingspecimen To Apply the current status to only non-conflicting specimen(s)-click '<b>Apply</b>'
+consent.currentstatusonallspecimen To Apply the current status on all specimens -click '<b>ApplyAll</b>'
 consent.consentwaivedyes Yes
 consent.consentwaivedno=No
 consent.barcodelable=Barcode/Label
