--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -94,6 +94,8 @@ errors.same.distributionSite.required=<li><font color="red">Either specimen site
 errors.availableQuantity.required=<li><font color="red">Specimens cannot be ordered with no available Quantity.Specimen named {0} has no Available Quantity.</font></li>
 errors.specimenPosition.required=<li><font color="red">Specimens cannot be ordered with virtual storage location.Specimen named {0} is virtually located . </font></li>
 errors.specimenArray.same.distributionSite.required=<li><font color="red">Specimen Arrays from multiple sites exist,you can place an order from only one site at a time.</font></li>
+errors.collectionStatus=<li><font color="red">Anticipated specimen (i.e. with collection status pending, over due, not collected)cannot be ordered.Specimen named {0} is an anticipated specimen.</font></li>
+errors.isAvailable=<li><font color="red">Specimen named {0} is not available.</font></li>
 
 errors.specimenClass.required=<li><font color="red">Specimen Class Required</font></li>
 errors.specimenType.required=<li><font color="red">Specimen Type Required</font></li>
