--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1668,6 +1668,7 @@ shoppingcart.duplicateObjsError=<li><font color="red">{1} records were already p
 shoppingcart.exportfilexception=<li><font color="red">Error while exporting the file.Please contact Administrator.</font></li>
 
 #Aliquots keys
+aliquots.header=Specimen Aliquot
 aliquots.applyFirstToAll=Apply First Location To All
 aliquots.createTitle=Create Aliquot
 aliquots.title=Aliquot
